Fix caption z-index issue

--- a/css/main.css
+++ b/css/main.css
@@ -722,7 +722,7 @@ html, body {
   bottom: 25px;
   text-align: center;
   display: block;
-  z-index: 666;
+  z-index: 19;
   opacity: 0; }
   #captions.hidden {
     display: none; }
