--- a/css/sass/partials/_captions.scss
+++ b/css/sass/partials/_captions.scss
@@ -8,7 +8,7 @@
     bottom: 25px;
     text-align: center;
     display: block;
-    z-index: 666;
+    z-index: 19;
     opacity: 0;
 
     &.hidden {
